fix: handle dark mode functionality

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -16,7 +16,20 @@ body {
     }
   }
 }
+:root {
+  --primary: #fff;
+  --secondary: #f1f1f1;
+  --text: #000;
+  --text-fade: #696c6f;
+}
+
 .dark-mode {
+  --primary: #2b3743;
+  --secondary: #212e37;
+  --text: #fff;
+  --text-fade: #ced2d6;
+}
+/* .dark-mode {
   background-color: $secondary--dark;
   header {
     background-color: $primary--dark;
@@ -63,6 +76,7 @@ body {
     }
   }
   .form-control {
+    color: #fff !important;
     background-color: $primary--dark !important;
   }
   .dropdown {
@@ -81,4 +95,4 @@ body {
   .listing-card__body {
     background-color: $primary--dark !important;
   }
-}
+} */
